# Crossfire

./: .gitignore  cabal.project  crossfire.cabal  flake.nix
.github/workflows/: deploy.yml
app/: Logic.hs  Main.hs  Strategies.hs  Types.hs  View.hs
app/Strategies/: AlphaBetaPruning.hs  NaiveBestLauncher.hs
