cabal-version:      2.4
name:               crossfire
version:            0.1.0.0
synopsis:           A launcher-based Gomoku game built with Miso
description:
  Crossfire is a two-player browser game where players fire stones
  onto the board from launchers. Stones slide until blocked. First
  to get 4 in a row wins.
license:            MIT
author:             Tianyu
build-type:         Simple

executable crossfire
  main-is:          Main.hs
  other-modules:    Types, Logic, View
  hs-source-dirs:   app
  build-depends:
      base          >= 4.7  && < 5
    , miso          >= 1.8  && < 2
    , containers    >= 0.6  && < 1
    , random        >= 1.1  && < 2
  default-language: Haskell2010
  ghc-options:      -Wall -threaded -rtsopts -with-rtsopts=-N
